Added support for java 8 and read only mode